Fixes #76: Spacing below h2 should be reduced in certain locations.

--- a/template/theme/sass/partials/_base.scss
+++ b/template/theme/sass/partials/_base.scss
@@ -21,4 +21,4 @@ $sdk-box-border-color:			#ddd;
 
 $sdk-ckeditor-color:			#cceaee;
 
-$std-standard-vgap: 			1.4em;
+$std-standard-vgap: 			1.2em;
